fix(css): hide overflow on x-axis

--- a/themes/conferences/static/css/output.css
+++ b/themes/conferences/static/css/output.css
@@ -688,6 +688,10 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
